# learning_c-

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CapacityBox.hpp  DistributionPage.hpp  GenPage.hpp  LabelAspectRatioPixmap.hpp  README.md  add.cpp  add.h  constants.h  impl.hpp  main.cpp
autotask/: CMakeLists.txt  tasks.txt
autotask/service/: helper.hpp  solution.cpp  solution.cpp.in  solution.hpp  test.cpp  test.cpp.in
autotask/service/configs/: solution.cpp.in  solution.hpp.in  test.cpp.in
autotask/volume/Palindrome_string/: solution.cpp  test.cpp
autotask/volume/Palindrome_string/include/Palindrome_string/: solution.hpp
autotask/volume/Parentheses_balance_check/: solution.cpp  test.cpp
autotask/volume/Parentheses_balance_check/include/Parentheses_balance_check/: solution.hpp
autotask/volume/Pythagorean_triple/: solution.cpp  test.cpp
autotask/volume/Pythagorean_triple/include/Pythagorean_triple/: solution.hpp
autotask/volume/at_2_1/: solution.cpp  solution.hpp  test.cpp
autotask/volume/at_2_1/include/at_2_1/: solution.hpp
autotask/volume/at_2_4/: solution.cpp  test.cpp
autotask/volume/at_2_4/include/at_2_4/: solution.hpp
autotask/volume/is_palindrome/: solution.cpp  test.cpp
autotask/volume/is_palindrome/include/is_palindrome/: solution.hpp
autotask/volume/maximum_subarray_summ/: solution.cpp  test.cpp
autotask/volume/maximum_subarray_summ/include/maximum_subarray_summ/: solution.hpp
autotask/volume/palindromic_substrings/: solution.cpp  test.cpp
autotask/volume/palindromic_substrings/include/palindromic_substrings/: solution.hpp
plotter/: AboutForm.hpp  AspectRatioPixmap.hpp  CMakeLists.txt  FuncFactory.hpp  FuncModel.hpp  FuncSelector.hpp  GraphMethodModel.hpp  GraphMethodRadioDelegate.hpp  ImageWidget.hpp  LabelAspectRatioPixmap.hpp  ListFunc.hpp  MainWindow.hpp  colorAppointer.hpp
plotter/core/: CMakeLists.txt  NetworkAccess.hpp  Singleton.hpp  finally.hpp
plotter/core/src/: NetworkAccess.cpp
plotter/src/: AboutForm.cpp  AspectRatioPixmap.cpp  FuncFactory.cpp  FuncModel.cpp  FuncSelector.cpp  GraphMethodModel.cpp  GraphMethodRadioDelegate.cpp  ImageWidget.cpp  LabelAspectRatioPixmap.cpp  ListFunc.cpp  MainWindow.cpp  colorAppointer.cpp  main.cpp  metatypes.cpp
plotter/ui/: AboutForm.ui  MainWindow.ui
pswgen/: CMakeLists.txt  DistributionPage.hpp  GenPage.hpp  MainWindow.hpp  PresetBox.hpp  impl.hpp
pswgen/core/: Singleton.hpp
pswgen/rc/: rc.qrc
pswgen/src/: CapacityBox.cpp  DistributionPage.cpp  GenPage.cpp  LabelAspectRatioPixmap.cpp  MainWindow.cpp  PresetBox.cpp  impl.cpp  main.cpp  metatypes.cpp
pswgen/ui/: AboutForm.ui  CapacityBox.ui  DistributionPage.ui  GenPage.ui  MainWindow.ui
sandbox/: CMakeLists.txt  main.cpp
service_shared/: CMakeLists.txt
service_shared/include/service_shared/: helper.hpp
sort_sandbox/: CMakeLists.txt  test.cpp
sort_sandbox/include/sandbox_sort/: defines.hpp
sort_sandbox/service/: helper.hpp  src.cpp.in
sort_sandbox/volume/: bubble.cpp
src/: CapacityBox.cpp  DistributionPage.cpp  GenPage.cpp  LabelAspectRatioPixmap.cpp  MainWindow.cpp  PresetBox.cpp  impl.cpp  main.cpp  meta_types.cpp
ui/: AboutForm.ui  DistributionPage.ui  GenPage.ui  MainWindow.ui  PresetBox.ui
volume/: CMakeLists.txt
volume/2.4/: solution.cpp  test.cpp
